tests/baselines/reference/objectLiteralShorthandPropertiesFunctionArgument2.errors.txt
tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesFunctionArgument2.ts(7,5): error TS2345: Argument of type '{ name: 文字; id: 数字; }' is not assignable to parameter of type '{ a: 文字; id: 数字; }'.
  Property 'a' is missing in type '{ name: 文字; id: 数字; }'.


==== tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesFunctionArgument2.ts (1 errors) ====
    var id: number = 10000;
    var name: string = "my name";
    
    var person = { name, id };
    
    function foo(p: { a: string; id: number }) { }
    foo(person);  // error
        ~~~~~~
!!! error TS2345: Argument of type '{ name: 文字; id: 数字; }' is not assignable to parameter of type '{ a: 文字; id: 数字; }'.
!!! error TS2345:   Property 'a' is missing in type '{ name: 文字; id: 数字; }'.
    